--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -1,6 +1,19 @@
-{% extends 'todo/base.html' %}
+{% extends "todo/base.html" %}
 
 {% block content %}
-<h1>Home</h1>
+<br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+<div class="row justify-content-center mt-5">
+        <div class="col-md-7 text-center">
+
+                 <h1>Just ToDo it!</h1>
+            <p>Thousands of thoughts and many things to do everyday. Just breathe out and let us help you to remember important plans.</p>
+        <a role="button" class="btn btn-primary btn-lg" href="{% url 'signupuser' %}">Start</a>
+        </div>
+    </div>
 
 {% endblock %}
